fix: text review and horizontal scroll fix

--- a/src/styles/base/html.css
+++ b/src/styles/base/html.css
@@ -2,6 +2,6 @@
 
 @layer base {
     html {
-        @apply scroll-smooth overflow-x-hidden;
+        @apply scroll-smooth;
     }
 }
