--- a/src/styles/base/scroll.css
+++ b/src/styles/base/scroll.css
@@ -8,4 +8,8 @@
     ::-webkit-scrollbar-thumb {
         @apply bg-accent-3-200 dark:bg-accent-4-200 border border-accent-6 dark:border-accent-1 rounded-xl;
     }
+
+    ::-webkit-scrollbar:horizontal {
+        @apply h-0;
+    }
 }
